--- a/training_source/train-notebook.ipynb
+++ b/training_source/train-notebook.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "9dc1b260-9fd1-4076-a90b-ba63f8b8ca38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "0ac0f8f8-c3fb-4016-bfff-211fdf261c84",
    "metadata": {},
    "outputs": [],
@@ -23,29 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "0a977db5-ba6a-41ab-986a-368dc42cb39c",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-09-15 13:42:52.667446: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-09-15 13:42:53.058246: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-09-15 13:42:54.100730: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-09-15 13:42:54.105448: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-09-15 13:42:54.106526: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-09-15 13:42:54.556925: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-09-15 13:42:56.516791: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-      "/burg/home/ma4608/.local/lib/python3.11/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/burg/home/ma4608/.local/lib/python3.11/site-packages/torchvision/image.so: undefined symbol: _ZN3c1017RegisterOperatorsD1Ev'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
-      "  warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%autoreload\n",
     "from trainer import *\n",
@@ -55,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "d7b12fdc-2526-42ec-a8f2-59d6dd7013a8",
    "metadata": {
     "scrolled": true
@@ -129,6 +121,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23a31adc-ec8c-414d-a5e3-638e49ee5981",
+   "metadata": {},
+   "source": [
+    "### Training original TA2 system on performers' data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "2641421a-26f5-497f-89d4-0b52424eab95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# output_path = '/mnt/swordfish-pool2/milad/datadreamer-ta2/'\n",
+    "# luar_model_path = '/mnt/swordfish-pool2/milad/rrivera1849'\n",
+    "output_path = '/burg/dsi/users/ma4608/ajay-ta2-system/output'\n",
+    "luar_model_path = '/burg/dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849'\n",
+    "fold = \"/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/*/{split}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4203467e-0470-4705-9009-9dbdb649e3d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/ao3/train_queries.jsonl\n",
+      "/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_queries.jsonl\n",
+      "/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/train_queries.jsonl\n",
+      "/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/train_queries.jsonl\n",
+      "/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/reddit/train_queries.jsonl\n",
+      "/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/ao3/train_candidates.jsonl\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_num_rows, train_data_generator = get_performs_data_generator(fold, \"train\")\n",
+    "dev_num_rows, dev_data_generator = get_performs_data_generator(fold, \"dev\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e63fc2a7-f8aa-413c-9538-91cc55142712",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "c03d5eef-275d-4458-a919-5830fe79e46f",
    "metadata": {},
    "source": [
@@ -137,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "efe4397e-c25b-4306-b335-177771705eea",
    "metadata": {},
    "outputs": [],
@@ -150,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "10dd4486-104d-4ecf-852b-5f22e2991c73",
    "metadata": {},
    "outputs": [],
@@ -624,7 +670,9 @@
   {
    "cell_type": "markdown",
    "id": "8914eba7-5840-472c-995c-0f9053075098",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Train original TA2 system with Supervised Contrastive Loss:"
    ]
@@ -796,14 +844,6 @@
    "source": [
     "train_datadreamer_ta2(fold, output_path + '/supcon_ta2_model', 'SupConLoss', luar_model_path=luar_model_path, batch_size=128, epochs=25)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d01eee8-027e-422b-bd83-f820da39cf0b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
