--- a/training_source/train-notebook.ipynb
+++ b/training_source/train-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "9dc1b260-9fd1-4076-a90b-ba63f8b8ca38",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "0ac0f8f8-c3fb-4016-bfff-211fdf261c84",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "0a977db5-ba6a-41ab-986a-368dc42cb39c",
    "metadata": {
     "scrolled": true
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "d7b12fdc-2526-42ec-a8f2-59d6dd7013a8",
    "metadata": {
     "scrolled": true
@@ -134,11 +134,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# output_path = '/mnt/swordfish-pool2/milad/datadreamer-ta2/'\n",
-    "# luar_model_path = '/mnt/swordfish-pool2/milad/rrivera1849'\n",
-    "output_path = '/burg/dsi/users/ma4608/ajay-ta2-system/output'\n",
-    "luar_model_path = '/burg/dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849'\n",
-    "fold = \"/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/*/{split}\""
+    "output_path = '/mnt/swordfish-pool2/milad/datadreamer-ta2/'\n",
+    "luar_model_path = '/mnt/swordfish-pool2/milad/rrivera1849'\n",
+    "fold = \"/mnt/swordfish-pool2/milad/hiatus-data/performers-data/tmp-data/*/{split}\"\n",
+    "\n",
+    "# output_path = '/burg/dsi/users/ma4608/ajay-ta2-system/output'\n",
+    "# luar_model_path = '/burg/dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849'\n",
+    "# fold = \"/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/*/{split}\""
    ]
   },
   {
@@ -862,7 +864,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
