--- a/training_source/train-notebook.ipynb
+++ b/training_source/train-notebook.ipynb
@@ -2,26 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "9dc1b260-9fd1-4076-a90b-ba63f8b8ca38",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "0ac0f8f8-c3fb-4016-bfff-211fdf261c84",
    "metadata": {},
    "outputs": [],
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "0a977db5-ba6a-41ab-986a-368dc42cb39c",
    "metadata": {
     "scrolled": true
@@ -47,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "d7b12fdc-2526-42ec-a8f2-59d6dd7013a8",
    "metadata": {
     "scrolled": true
@@ -129,23 +120,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "2641421a-26f5-497f-89d4-0b52424eab95",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_path = '/mnt/swordfish-pool2/milad/datadreamer-ta2/'\n",
-    "luar_model_path = '/mnt/swordfish-pool2/milad/rrivera1849'\n",
-    "fold = \"/mnt/swordfish-pool2/milad/hiatus-data/performers-data/tmp-data/*/{split}\"\n",
+    "# output_path = '/mnt/swordfish-pool2/milad/datadreamer-ta2/'\n",
+    "# luar_model_path = '/mnt/swordfish-pool2/milad/rrivera1849'\n",
+    "# fold = \"/mnt/swordfish-pool2/milad/hiatus-data/performers-data/tmp-data/*/{split}\"\n",
     "\n",
-    "# output_path = '/burg/dsi/users/ma4608/ajay-ta2-system/output'\n",
-    "# luar_model_path = '/burg/dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849'\n",
-    "# fold = \"/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/*/{split}\""
+    "output_path = '/burg/old_dsi/users/ma4608/ajay-ta2-system/output'\n",
+    "luar_model_path = '/burg/old_dsi/users/ma4608/ajay-ta2-system/training_source/rrivera1849'\n",
+    "fold = \"/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/*/{split}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4203467e-0470-4705-9009-9dbdb649e3d6",
    "metadata": {},
    "outputs": [
@@ -153,12 +144,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/ao3/train_queries.jsonl\n",
-      "/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_queries.jsonl\n",
-      "/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/train_queries.jsonl\n",
-      "/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/train_queries.jsonl\n",
-      "/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/reddit/train_queries.jsonl\n",
-      "/burg/dsi/users/ma4608/hiatus_performers_data/sadiri/ao3/train_candidates.jsonl\n"
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/*/train\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_queries_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/train_queries_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_candidates_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/train_candidates_filtered.jsonl\n",
+      "Dataset Statistics: train 37554 0\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/*/dev\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/dev_queries_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/dev_queries_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/dev_candidates_filtered.jsonl\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/dev_candidates_filtered.jsonl\n",
+      "Dataset Statistics: dev 11002 0\n"
      ]
     }
    ],
@@ -169,11 +166,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e63fc2a7-f8aa-413c-9538-91cc55142712",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 22,
+   "id": "dd2cd4be-6da8-4de5-b65a-4bf2f1a0c4eb",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'documentID': 'dd1050d8-3438-5800-e8f9-21d2ca01acd1', 'authorIDs': ['00011ab2-01a0-f41b-a8c7-df5144b6f7f0'], 'fullText': 'Ships will be unable to enter or leave Port Kembla at night this week as a dispute between marine pilots and the port\\'s management escalates into industrial action.\\nThe port\\'s eight marine pilots will stop guiding ships for the next four nights in a bid to force a deal on a new enterprise agreement.\\nThe stoppages mean no vessels will be able to enter or leave the port between 6pm and 6am until the action ends on Saturday.\\nAustralian Maritime Officers Union director <PERSON> yesterday said the union and its members \"deeply regret\" the dispute had reached a point where it could disrupt shipping.\\n\"The union has a view if it can\\'t negotiate then it has to take those actions available to it and its members under the Fair Work Act,\" he said.\\nThe industrial action will also include not working outside rostered hours.\\nMr <PERSON> said it could escalate further.\\nNegotiations with Port Kembla Port Corporation have been under way for months.\\nMr <PERSON> said the pilots were pushing for a 4 per cent pay rise, the same as other employees had received at Port Kembla and at state-owned ports in Sydney and Newcastle.\\n\"We\\'ve been patient and patient and patient and we\\'ve said enough is enough,\" he said.\\nThe union\\'s claim also includes conditions relating to fatigue management, income protection and insurance, and would limit pilots to three ship movements per shift, normally 12 hours.\\nPort Kembla Port Corporation chief executive officer <PERSON> said he was disappointed the pilots had decided to take action after he met them last Thursday.\\n\"We will work with the Fair Work legislation to see how we can minimise any impact on the port operations,\" he said.\\n\"We\\'ll just need to look at it to see what options it does give us and also we\\'ll continue to see if the parties can reach an agreement.\"\\nMr <PERSON> said the night stoppages meant vessels would be delayed.\\n\"The union has asked for a number of issues in addition to the 4 per cent,\" he said.\\n\"We are always open and willing to negotiate and I said that I hoped to get back to the union very early in December with an offer and asked for any action to be deferred, but unfortunately they chose the course of action which they have,\" he said.\\nThe industrial action comes as the NSW government pushes ahead with its plans to privatise Port Kembla on a 99-year lease.\\nA spokeswoman for Ports Minister <PERSON> yesterday said the marine pilot services would not be privatised.\\n', 'spanAttribution': [{'authorID': '00011ab2-01a0-f41b-a8c7-df5144b6f7f0', 'start': 0, 'end': 2438}], 'collectionNum': 'HRS 1', 'source': 'illawarramercury.com.au', 'dateCollected': '2018-05-20T10:11:06Z', 'publiclyAvailable': True, 'deidentified': True, 'languages': ['en'], 'lengthWords': 408, 'dateCreated': '11-20-2012', 'timeCreated': '11-20-2012', 'isForeground': False, 'authorID': '00011ab2-01a0-f41b-a8c7-df5144b6f7f0'}\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'query_author_ids' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(line)\n\u001b[1;32m      3\u001b[0m author_id \u001b[38;5;241m=\u001b[39m line[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauthorIDs\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m----> 4\u001b[0m query_author_ids\u001b[38;5;241m.\u001b[39madd(author_id)\n\u001b[1;32m      5\u001b[0m author_documents[author_id]\u001b[38;5;241m.\u001b[39mappend(line[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfullText\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      6\u001b[0m author_query_documents[author_id]\u001b[38;5;241m.\u001b[39mappend(line[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfullText\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'query_author_ids' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for line in jsonlines.open('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/realnews/dev_candidates_filtered.jsonl'):\n",
+    "    print(line)\n",
+    "    author_id = line['authorIDs'][0]\n",
+    "    query_author_ids.add(author_id)\n",
+    "    author_documents[author_id].append(line['fullText'])\n",
+    "    author_query_documents[author_id].append(line['fullText'])\n",
+    "    break"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -864,7 +890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
