--- a/training_source/author-filtering.ipynb
+++ b/training_source/author-filtering.ipynb
@@ -22,29 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "ef9cd191-1976-48d8-812e-3636136257ec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/burg/home/ma4608/.local/lib/python3.11/site-packages/sentence_transformers/cross_encoder/CrossEncoder.py:11: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-      "  from tqdm.autonotebook import tqdm, trange\n",
-      "2024-09-30 05:15:33.132357: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-09-30 05:15:33.135967: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-09-30 05:15:33.174296: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-09-30 05:15:33.174317: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-09-30 05:15:33.174339: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-09-30 05:15:33.185181: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-09-30 05:15:34.560393: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-      "/burg/home/ma4608/.local/lib/python3.11/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: '/burg/home/ma4608/.local/lib/python3.11/site-packages/torchvision/image.so: undefined symbol: _ZN3c1017RegisterOperatorsD1Ev'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
-      "  warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%autoreload\n",
     "\n",
@@ -54,7 +35,8 @@
     "import numpy as np\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "import tqdm"
+    "import tqdm\n",
+    "import random"
    ]
   },
   {
@@ -94,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "8b84dd10-35f5-4068-9e9f-ff70b26ea844",
    "metadata": {},
    "outputs": [],
@@ -124,11 +106,11 @@
     "    gdf_sample = gdf_sample[['authorID', 'pairwise_sims', 'max_sim']]\n",
     "    gdf_sample = gdf_sample[gdf_sample.max_sim < 0.2]\n",
     "    filtered_authors = gdf_sample.authorID.tolist()\n",
-    "\n",
+    "    filtered_authors = random.sample(filtered_authors, max_sample_size) if len(filtered_authors) > max_sample_size else filtered_authors\n",
+    "    \n",
     "    for p, df in dfs.items():\n",
-    "        print('{} --> {}'.format(len(df), len(df[df.authorID.isin(filtered_authors)])))\n",
+    "        print(str(p), '{} --> {}'.format(len(df), len(df[df.authorID.isin(filtered_authors)])))\n",
     "        df = df[df.authorID.isin(filtered_authors)]\n",
-    "        df = df.sample(max_sample_size) if len(df) > max_sample_size else df\n",
     "        with open(str(p).replace('.jsonl','_filtered.jsonl'), \"w\") as f:\n",
     "            f.write(df.to_json(orient='records', lines=True))\n",
     "\n",
@@ -138,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "25390d7a-9c7c-4660-87d5-376f49bdacb2",
    "metadata": {
     "scrolled": true
@@ -155,15 +137,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "33538it [03:01, 184.52it/s]\n"
+      "33538it [03:02, 183.85it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33538 --> 13582\n",
-      "33538 --> 13582\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/dev_candidates.jsonl 33538 --> 5000\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/dev_queries.jsonl 33538 --> 5000\n",
       "[PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/test_candidates.jsonl'), PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/test_queries.jsonl')]\n"
      ]
     },
@@ -171,31 +153,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "65102it [05:52, 184.68it/s]\n"
+      "65102it [05:54, 183.87it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "65102 --> 26435\n",
-      "65103 --> 26435\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/test_candidates.jsonl 65102 --> 5000\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/test_queries.jsonl 65103 --> 5000\n",
       "[PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_candidates.jsonl'), PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/train_queries.jsonl')]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "558885it [50:15, 185.34it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "558926 --> 225898\n",
-      "558918 --> 225898\n"
      ]
     }
    ],
@@ -204,12 +171,12 @@
     "ds_path = '/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/gmane/'\n",
     "df_info = extract_split_similarity_info(ds_path, 'dev', max_sample_size=5000)\n",
     "df_info = extract_split_similarity_info(ds_path, 'test', max_sample_size=5000)\n",
-    "df_info = extract_split_similarity_info(ds_path, 'train', max_sample_size=10000)"
+    "df_info = extract_split_similarity_info(ds_path, 'train', max_sample_size=25000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "be52b80a-0807-476f-8be9-aaa41cfc770c",
    "metadata": {
     "scrolled": true
@@ -226,15 +193,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3379it [00:31, 107.96it/s]\n"
+      "3379it [00:35, 96.09it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3379 --> 437\n",
-      "3379 --> 437\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/dev_candidates.jsonl 3379 --> 437\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/dev_queries.jsonl 3379 --> 437\n",
       "[PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/test_candidates.jsonl'), PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/test_queries.jsonl')]\n"
      ]
     },
@@ -242,15 +209,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6560it [00:53, 122.42it/s]\n"
+      "6560it [00:53, 123.03it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6560 --> 891\n",
-      "6560 --> 891\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/test_candidates.jsonl 6560 --> 891\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/test_queries.jsonl 6560 --> 891\n",
       "[PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/train_candidates.jsonl'), PosixPath('/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/train_queries.jsonl')]\n"
      ]
     },
@@ -258,15 +225,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "56319it [07:40, 122.18it/s]\n"
+      "56319it [07:40, 122.40it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56319 --> 7469\n",
-      "56319 --> 7469\n"
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/train_candidates.jsonl 56319 --> 7469\n",
+      "/burg/old_dsi/users/ma4608/hiatus_performers_data/sadiri/bookcorpus/train_queries.jsonl 56319 --> 7469\n"
      ]
     }
    ],
